--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@ body {
 }
 
 header {
-  text-align: center
+  text-align: center;
 }
 
 img {
-  display: block
-  margin-left: auto
-  margin-right: auto
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-a {
-  padding-left: 10px
-  padding-right: 10px
-  background-color: gray
+nav {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: gray;
 }
